--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.rifa">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -12,19 +16,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Rifa"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.Rifa">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.rifadb.RifaNew" />
-        <activity android:name="com.example.rifadb.RifaDetalle" />
-    </application>
 
+        <activity android:name="com.example.rifa.view.AuctionNew" />
+        <activity android:name="com.example.rifa.view.AuctionDetail" />
+
+    </application>
 </manifest>
